tests/reject/unbalanced_parens.ul
void main() {
     int x;

     x = 1 + (2 * 3 - (3 - 2);
}